--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -11,6 +11,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+         <!--
+           Produit réalisé par NDIAYE BABACAR
+           Contact: 07 53 10 86 19
+           Tout droit réservé
+       -->
   <app-root></app-root>
 </body>
 </html>
